[package]
name = "discord_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }



